zero-schema-macros/tests/ui/fail/62_optional_std_bool_array.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<[std::primitive::bool; 2]>,
}

fn main() {}
